# backend/src/routes/embedded.routes.ts
@@ -1,14 +1,8 @@
-/**
- * @fileoverview This file defines the routes for the embedded API, including
- * serving Swagger documentation and handling example and token generation endpoints.
- *
- * @module routes/embedded
- */
 
 import YAML from 'yamljs';
 import { Router, Response, Request, NextFunction } from 'express';
 import swaggerUi from 'swagger-ui-express';
-import { generateToken } from '../controllers/embedded.controller.js';
+import { addParticipant } from '../controllers/embedded.controller.js';
 import { openapiMiddlewareValidator } from '../middlewares/openapi.middleware.js';
 import { getOpenApiSpecPath } from '../utils/path-utils.js';
 
@@ -21,7 +15,7 @@ const openapiSpec = YAML.load(getOpenApiSpecPath());
  */
 embeddedRouter.use('/docs', swaggerUi.serve, swaggerUi.setup(openapiSpec));
 
-embeddedRouter.post('/token', openapiMiddlewareValidator, generateToken);
+embeddedRouter.post('/participant', openapiMiddlewareValidator, addParticipant);
 
 embeddedRouter.use((err: any, req: Request, res: Response, next: NextFunction) => {
 	res.status(err.status || 500).json({
